--- a/src/pages/HomePage/HomePage.styles.scss
+++ b/src/pages/HomePage/HomePage.styles.scss
@@ -22,6 +22,9 @@ button{
     padding: 10px;
     min-width: 150px;
     color: white;
+    &:hover{
+        background-color: rgba(255, 255, 255, 0.322);
+    }
 }
 a{
     color: white;
