--- a/src/pages/TicTacToe/TicTacToe.style.scss
+++ b/src/pages/TicTacToe/TicTacToe.style.scss
@@ -1,5 +1,5 @@
 .box {
-  color: white;
+  color: var(--primary-text-color);
   display: flex;
 }
 .player {
@@ -9,38 +9,14 @@
   padding: 20px;
   width: 25%;
 }
-.tile {
-  height: 100px;
-  width: 100px;
-  background: lightseagreen;
-  margin: 1px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 60px;
-}
 
-.tile.win {
-  background: rgb(255, 0, 0);
-}
 
-.tile {
-    font-family: "Rock Salt", cursive;
-    box-shadow: 1px 0px 7px 0px #ff6c6c;
-  &:hover {
-   transform: scale(1.1);
-  }
-  .div {
-    transform: translateY(-10%);
-  }
-}
-
-.tile-container {
-    width: 75%;
-  padding: 20px;
-  display: grid;
-  grid-auto-flow: row;
-  grid-template-columns: auto auto auto;
+.tile-wrapper {
+//   box-shadow: 0px 0px 0px 4px #3c3c3c;
+//     border-radius: 14
+// px
+// ;
+//     background-color: #3c3c3c;
 }
 
 .ttt-container {
