framer motion for page out and in animation for play button

--- a/src/components/Button/Button.styles.scss
+++ b/src/components/Button/Button.styles.scss
@@ -5,6 +5,9 @@
     min-width: 150px;
     color: var(--primary-text-color);
     text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     &:hover{
         background-color: rgba(255, 255, 255, 0.322);
     }
