--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,10 @@ body{
     justify-content: center;
     align-items: center;
     background-color: var(--primary-bg-color);
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
+
 }
 a{
   color: var(--primary-text-color);
