animation changes for intro page

--- a/src/pages/IntroPage/IntroPage.styles.scss
+++ b/src/pages/IntroPage/IntroPage.styles.scss
@@ -5,6 +5,8 @@
 }
 
 .main-container-intro{
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
