added 2nd div movement

--- a/src/games/Test/Test.style.scss
+++ b/src/games/Test/Test.style.scss
@@ -1,4 +1,11 @@
-.draggable-div{
+.draggable-div1{
+  position: absolute;
+  height: 100px;
+  width: 100px;
+  background-color: rgb(0, 225, 255);
+  cursor: none;
+}
+.draggable-div2{
   position: absolute;
   height: 100px;
   width: 100px;
